# pandrs

./: .clippy.toml  .gitignore  ALPHA4_FEATURES_COMPARISON.md  ALPHA4_MIGRATION_GUIDE.md  ALPHA4_PERFORMANCE_VALIDATION.md  ALPHA4_RELEASE_NOTES.md  BENCHMARK.md  BENCHMARKING.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CLAUDE_TEST_PLAN.md  CLUSTER_EXECUTION_EVALUATION.md  CRATE.md  Cargo.toml  MIGRATION_STRATEGY.md  PANDAS_ROADMAP.md  PERFORMANCE_PLAN.md  PRODUCTION_READINESS.md  README.md  REFACTORING_PLAN.md  TODO.md  build.rs
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: coverage.yml  release.yml  rust.yml
.ipynb_checkpoints/: TODO-checkpoint.md
benches/: alpha4_comprehensive_benchmark.rs  comprehensive_benchmark.rs  comprehensive_features_benchmark.rs  dataframe_bench.rs  enhanced_comprehensive_benchmark.rs  legacy_dataframe_bench.rs  ml_benchmarks.rs  multitenancy_benchmarks.rs  pandas_comparison_benchmark.rs  profiling_benchmark.rs  query_optimizer_benchmarks.rs  regression_benchmark.rs  simd_string_benchmarks.rs
docs/: COMPILATION_FIXES_v0.1.0-beta.2.md  README.md
examples/: advanced_indexing_demo.rs  advanced_indexing_types_demo.rs  advanced_multi_index_demo.rs  alpha4_advanced_indexing_example.rs  alpha4_enhanced_plotting_example.rs  alpha4_features_example.rs  alpha4_groupby_named_agg_example.rs  alpha4_jupyter_integration_example.rs  alpha4_ml_strategy_selection_example.rs  alpha4_performance_demo.rs  alpha4_query_eval_example.rs  alpha4_zero_copy_example.rs  alpha7_enhanced_window_operations_example.rs  alpha7_groupwise_window_operations_example.rs  alpha8_advanced_indexing_types_example.rs  alpha8_jit_compilation_example.rs  alpha8_optimized_query_example.rs  alpha8_phase4_comprehensive_example.rs  basic_df.rs  basic_usage.rs  benchmark_comparison.rs  benchmark_million.rs  business_analytics_hierarchical_example.rs  categorical_example.rs  categorical_na_example.rs  column_prototype.rs  comprehensive_demo.rs  comprehensive_io_alpha6_example.rs  comprehensive_io_demo.rs  comprehensive_window_example.rs  database_integration_example.rs  dataframe_window_example.rs  datetime_accessor_example.rs  df_optimization_test.rs  direct_aggregation_performance_demo.rs  distributed_context_example.rs  distributed_context_example.rs.disabled  distributed_example.rs  distributed_example.rs.disabled  distributed_expr_example.rs  (+113 more)
py_bindings/: Cargo.toml  README.md  build.rs  pyproject.toml  setup.py
py_bindings/examples/: basic_usage.py  benchmark.py  benchmark_million.py  optimized_benchmark.py  optimized_benchmark_updated.py  string_pool_benchmark.py  string_pool_test.py  test_pandas_integration.py
py_bindings/python/pandrs/: __init__.py  benchmark.py
py_bindings/src/: lib.rs  py_optimized.rs
py_bindings/src/py_optimized/: py_string_pool.rs
py_bindings/tests/: test_beta2_integration.py  test_dataframe.py  test_integration.py
scripts/: validate_performance.rs
src/: arrow_integration.rs  error.rs  index.rs  lib.rs  main.rs  na.rs
src/analytics/: alerts.rs  dashboard.rs  metrics.rs  mod.rs
src/audit/: mod.rs
src/auth/: api_key.rs  jwt.rs  mod.rs  oauth.rs  session.rs
src/column/: boolean_column.rs  common.rs  float64_column.rs  int64_column.rs  mod.rs  simd_operations.rs  simple_zero_copy_string_column.rs  string_column.rs  string_pool.rs
src/compat/: dataframe_adapter.rs  mod.rs
src/compute/: lazy.rs  mod.rs  parallel.rs
src/config/: credentials.rs  loader.rs  mod.rs  resilience.rs  validation.rs
src/connectors/: cloud.rs  database.rs  mod.rs
src/core/: advanced_multi_index.rs  column_ops.rs  dataframe_traits.rs  error.rs  error_context.rs  migration.rs  mod.rs
src/dataframe/: advanced_indexing.rs  apply.rs  base.rs  categorical.rs  enhanced_window.rs  gpu_window.rs  groupby.rs  groupby_window.rs  hierarchical_groupby.rs  indexing.rs  jit_window.rs  join.rs  mod.rs  multi_index_cross_section.rs  multi_index_results.rs  optimized.rs  plotting.rs  query.rs  transform.rs  window.rs
src/distributed/: mod.rs
src/gpu/: advanced_ops.rs  benchmark.rs  cuda.rs  memory_pool.rs  mod.rs  multi_gpu.rs  operations.rs
src/graph/: centrality.rs  components.rs  core.rs  mod.rs  path.rs  traversal.rs
src/groupby/: mod.rs
src/index/: mod.rs  multi_index.rs
src/io/: csv.rs  excel.rs  format_traits.rs  json.rs  mod.rs  parquet.rs  sql.rs  streaming.rs
src/jupyter/: mod.rs
src/ml/: anomaly_detection.rs  automl.rs  backward_compat.rs  clustering.rs  dimension_reduction.rs  feature_engineering.rs  gpu.rs  metrics.rs  mod.rs  model_selection.rs  models.rs  pipeline.rs  pipeline_extended.rs  preprocessing.rs  sklearn_compat.rs
src/multitenancy/: mod.rs
src/optimized/: convert.rs  dataframe.rs  direct_aggregations.rs  lazy.rs  mod.rs  operations.rs  query_optimizer.rs
src/parallel/: mod.rs
src/pivot/: mod.rs
src/series/: base.rs  categorical.rs  datetime_accessor.rs  mod.rs  na_series.rs  string_accessor.rs  window.rs
src/stats/: descriptive.rs  distributions.rs  gpu.rs  hypothesis.rs  mod.rs  nonparametric.rs
src/storage/: adaptive_string_pool.rs  arena.rs  mod.rs  (+10 more)
tests/: README.md  alpha4_distributed_advanced_test.rs  alpha4_integration_test.rs  apply_test.rs  categorical_df_test.rs  categorical_na_test.rs  categorical_na_test_utils.rs  categorical_test.rs  comprehensive_window_test.rs  concurrency_test.rs  config_test.rs  dataframe_set_name_test.rs  dataframe_test.rs  debug_string_accessor.rs  distributed_advanced_test.rs  distributed_expr_test.rs  distributed_expr_validation_test.rs  distributed_fault_tolerance_test.rs  edge_cases_test.rs  gpu_test.rs  groupby_test.rs  index_test.rs  integration_test.rs  io_error_conditions_test.rs  io_test.rs  large_dataset_test.rs  ml_advanced_test.rs  ml_basic_test.rs  model_serving_test.rs  multi_index_test.rs  na_test.rs  optimized_apply_test.rs  optimized_categorical_test.rs  optimized_custom_aggregation_test.rs  optimized_dataframe_test.rs  optimized_groupby_enhanced_test.rs  optimized_groupby_test.rs  optimized_io_test.rs  optimized_io_test_utils.rs  optimized_join_test.rs  (+18 more)
(+142 files in other folders)
