[package]
name = "pandrs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of pandas-like DataFrame for data analysis"
authors = ["Cool Japan"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/pandrs"
readme = "README.md"
keywords = ["dataframe", "data", "analytics", "pandas", "statistics"]
categories = ["data-structures", "science", "mathematics"]

[dependencies]
num-traits = "0.2.19"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.12"
csv = "1.3.1"
rand = "0.9.0"  # 乱数生成用
chrono-tz = "0.10.3"  # タイムゾーン処理用
# plottersに互換性の問題があるため、textplots-rs（テキストベースのプロット）を使用
textplots = "0.8.7"  # 可視化機能用（テキストベース）
rayon = "1.9.0"  # 並列処理用
regex = "1.10.2"  # 正規表現処理用
lazy_static = "1.5.0"  # グローバル変数/シングルトン用
# Parquetサポートを最新バージョンで有効化
parquet = "54.3.1"  # Parquetファイルのサポート
arrow = "54.3.1"  # Arrowフォーマットのサポート
plotters = "0.3.7"
# Excel対応
calamine = "0.23.1"  # Excel読み込み用
simple_excel_writer = "0.2.0"  # Excel書き込み用
# SQL対応
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "postgres", "sqlite"], optional = true }
rusqlite = "0.30.0"  # SQLite対応

[features]
default = []
optimized = []  # 最適化実装のフラグ

[dev-dependencies]
tempfile = "3.8.1"  # テスト用一時ファイル作成
