[package]
name = "pandrs"
version = "0.1.0-rc.1"
edition = "2021"
description = "A high-performance DataFrame library for Rust, providing pandas-like API with advanced features including SIMD optimization, parallel processing, and distributed computing capabilities"
authors = ["Cool Japan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/pandrs"
readme = "README.md"
keywords = ["dataframe", "data", "analytics", "pandas", "statistics"]
categories = ["data-structures", "science", "mathematics"]
#exclude = ["tests/", "benches/", "docs/", "examples/", ".github/"]
exclude = [".github/"]

[dependencies]
num-traits = "0.2.19"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_yaml = "0.9.34"  # YAML serialization support
toml = "0.9.10"  # TOML serialization support
thiserror = "2.0.17"
csv = "1.4.0"
rand = "0.9.2"  # Random number generation
chrono-tz = "0.10.4"  # Timezone processing - compatible with chrono 0.4.38
num_cpus = "1.17.0"  # For CPU core detection
# Due to compatibility issues with plotters, using textplots-rs (text-based plots)
textplots = { version = "0.8.7", optional = true }  # For visualization features (text-based)
rayon = "1.11.0"  # For parallel processing
regex = "1.12.2"  # For regular expression processing
lazy_static = "1.5.0"  # For global variables/singletons
url = "2.5.7"  # URL parsing for configuration validation
dirs = "6.0.0"  # Platform-specific user directories
pbkdf2 = "0.12.2"  # PBKDF2 key derivation for credential security
sha2 = "0.10.9"  # SHA-2 cryptographic hash functions
aes-gcm = "0.10.3"  # AES-GCM encryption for secure credential storage
async-trait = "0.1.89"  # Async trait support for mock implementations
# Enable Parquet support with latest version - updated for chrono compatibility
parquet = { version = "57.1.0", optional = true }  # For Parquet file support
arrow = { version = "57.1.0", optional = true }  # For Arrow format support
plotters = { version = "0.3.7", optional = true }
# For streaming data support
crossbeam-channel = "0.5.15"  # For concurrent message passing
memmap2 = "0.9.9"  # For memory-mapped files
# Excel support
calamine = { version = "0.32.0", optional = true }  # For Excel reading
simple_excel_writer = { version = "0.2.0", optional = true }  # For Excel writing
# SQL support
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "postgres", "sqlite"], optional = true }
rusqlite = "0.32.1"  # SQLite support (pinned for sqlx compatibility - uses libsqlite3-sys 0.30.x)

# WebAssembly support (optional)
wasm-bindgen = { version = "0.2.106", optional = true }  # WebAssembly bindings
js-sys = { version = "0.3.83", optional = true }  # JavaScript interop
web-sys = { version = "0.3.83", features = [
    "Document", "Element", "HtmlCanvasElement", "Window",
    "CanvasRenderingContext2d", "MouseEvent", "console"
], optional = true }  # Web API bindings
plotters-canvas = { version = "0.3.1", optional = true }  # Canvas backend for plotters

# CUDA support (optional) - cudarc is platform-specific (see below)
half = { version = "2.7.1", optional = true }  # Half-precision floating point support
ndarray = { version = "0.17.1", optional = true } # N-dimensional arrays

# Distributed processing support (optional) - downgraded for chrono compatibility
datafusion = { version = "51.0.0", optional = true }  # DataFrame processing engine
uuid = { version = "1.19.0", features = ["v4", "serde"], optional = true }  # For unique IDs in distributed processing and serving
futures = { version = "0.3.31", optional = true }  # For async operations in distributed processing
tokio = { version = "1.48", features = ["full"], optional = true }  # Async runtime for streaming and resilience
log = "0.4.29"  # Logging interface

# JIT compilation support (optional)
cranelift = { version = "0.127.0", optional = true }  # JIT compiler
cranelift-module = { version = "0.127.0", optional = true }  # Module system for JIT
cranelift-jit = { version = "0.127.0", optional = true }  # JIT compilation backend
cranelift-frontend = { version = "0.127.0", optional = true }  # Frontend for building IR
cranelift-native = { version = "0.127.0", optional = true }  # Native target detection
target-lexicon = { version = "0.13.4", optional = true }  # Target specification

[workspace.lints.rust]
unused_variables = "allow"
unused_imports = "allow"
mismatched_lifetime_syntaxes = "allow"
dead_code = "allow"
unpredictable_function_pointer_comparisons = "allow"
unknown_lints = "allow"

[features]
default = []
optimized = []  # Flag for optimized implementation
jit = ["cranelift", "cranelift-module", "cranelift-jit", "cranelift-frontend", "cranelift-native", "target-lexicon"]  # Just-In-Time compilation support
backward_compat = []  # Backward compatibility for older APIs
wasm = ["wasm-bindgen", "js-sys", "web-sys", "plotters-canvas", "visualization"]  # WebAssembly support
cuda = ["cudarc", "half", "ndarray"]  # CUDA support (requires CUDA toolkit)
distributed = ["datafusion", "uuid", "dep:arrow", "dep:parquet", "dep:futures"]  # Distributed processing support
serving = ["uuid", "dep:tokio", "dep:futures"]  # Model serving and deployment support
excel = ["simple_excel_writer", "calamine"]  # Excel support
visualization = ["textplots", "plotters"]  # Visualization support
parquet = ["dep:arrow", "dep:parquet"]  # Parquet file support
sql = ["dep:sqlx"]  # SQL support
streaming = ["dep:tokio", "dep:futures"]  # Streaming data processing support

# Feature bundle for testing core features without external dependencies
test-core = ["optimized", "backward_compat", "streaming"]

# Feature bundle for testing most features without CUDA/WASM (visualization has compilation issues)
test-safe = ["optimized", "parquet", "excel", "sql", "streaming", "backward_compat"]

# Feature bundle for all safe features (excludes CUDA/WASM/distributed which require external tools)  
all-safe = ["optimized", "serving", "parquet", "excel", "sql", "streaming", "backward_compat", "resilience"]

# Feature bundle that works reliably for CI/development (most stable features)
stable = ["optimized", "parquet", "excel", "sql", "streaming", "backward_compat"]

# Resilience patterns (retry mechanisms, circuit breakers)
resilience = ["dep:tokio"]

[dependencies.tempfile]
version = "3.23.0"  # Create temporary files and directories

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bench]]
name = "enhanced_comprehensive_benchmark"
harness = false

[[bench]]
name = "regression_benchmark"
harness = false

[[bench]]
name = "profiling_benchmark"
harness = false

[[bench]]
name = "legacy_dataframe_bench"
harness = false

[[bench]]
name = "pandas_comparison_benchmark"
harness = false

[[bench]]
name = "ml_benchmarks"
harness = false

[[bench]]
name = "query_optimizer_benchmarks"
harness = false

[[bench]]
name = "multitenancy_benchmarks"
harness = false

[[bench]]
name = "simd_string_benchmarks"
harness = false

[[bench]]
name = "comprehensive_features_benchmark"
harness = false

[lints]
workspace = true

# Platform-specific dependencies: CUDA only on non-macOS (macOS doesn't support CUDA)
[target.'cfg(not(target_os = "macos"))'.dependencies]
cudarc = { version = "0.18.2", optional = true, features = ["driver", "cublas", "cuda-version-from-build-system"] }
